Ensure cohort menu is visible when loading visualization

--- a/src/GuppyDataExplorer/ExplorerCohort/ExplorerCohort.css
+++ b/src/GuppyDataExplorer/ExplorerCohort/ExplorerCohort.css
@@ -7,6 +7,7 @@
   min-width: 180px;
   margin-left: 2rem;
   text-align: center;
+  z-index: 20;
 }
 
 .guppy-explorer-cohort__button {
